Ufak bir düzeltme.(Yazdırma esnasında Türkçe kullandım.)

--- a/Ödevler/4. Hafta.ipynb
+++ b/Ödevler/4. Hafta.ipynb
@@ -235,8 +235,8 @@
     "    else:\n",
     "        odd_numbers += numbers[i]\n",
     "\n",
-    "print(\"Even numbers:\", even_numbers)\n",
-    "print(\"Odd numbers:\", odd_numbers)\n"
+    "print(\"Çift Sayılar:\", even_numbers)\n",
+    "print(\"Tek Sayılar:\", odd_numbers)\n"
    ]
   }
  ],
