2.ödev ve 1.ödevde ufak değişiklikler

--- a/Ödevler/4. Hafta 1.Ödev.ipynb
+++ b/Ödevler/4. Hafta 1.Ödev.ipynb
@@ -167,9 +167,7 @@
     "\n",
     " İfadedeki her bir kelimeyi (\"Hi-Kod\", \"Veri\", \"Bilimi\", \"Atölyesi\") değişken içinden seçilir. \n",
     " İfadeyi hepsini büyük harf olacak hale çevrilir. (\"HI-KOD VERİ BİLİMİ ATÖLYESİ\") \n",
-    " İfadeyi hepsini büyük harf olacak hale çevrilir.(\"hi-kod veri bilimi atölyesi\") \n",
-    "\n",
-    "\"0123456789\" ifadesindeki yalnızca çift sayıları ve yalnızca tek sayıları seçilir. (\"02468\", \"13579\")"
+    " İfadeyi hepsini büyük harf olacak hale çevrilir.(\"hi-kod veri bilimi atölyesi\") "
    ]
   },
   {
